# hubo-motion-rt

./: .gitignore  AUTHORS  CMakeLists.txt  ChangeLog  Doxyfile  INSTALL  Makefile  Makefile.am  NEWS  README  README.md  USAGE  configure.ac  ingress_1.txt  ingress_2.txt  mainpage.dox
Hubo_Windows/: Hubo_Windows.sln  Hubo_Windows.vcxproj  Hubo_Windows.vcxproj.filters
Hubo_Windows/include/: ach.h
debian/: README  changelog  control  copyright  hubo-motion-rt-utils.dirs  hubo-motion-rt-utils.install  hubo-motion-rt.install
include/: DrcHuboKin.h  Hubo_Control.h  Hubo_Tech.h  ImpedanceController.h  KeyboardInput.h  MotionTrajectory.h  SimpleConfig.h  Slerper.h  Walker.h  balance-daemon.h  calibration.h  control-daemon.h  daemonizer.h  hubo-zmp.h  manip.h  manip.h~  motion-trajectory.h  strutils.h  walker.h
scripts/: hubo  hubo-motion  tech
src/: DrcHuboKin.cpp  Hubo_Control.cpp  Hubo_Tech.cpp  ImpedanceController.cpp  MotionTrajectory.cpp  Slerper.cpp  Walker.cpp  balance-daemon.cpp  balance-test.cpp  calibrate.cpp  calibrationAPI.cpp  control-daemon.c  daemonizer.c  gravityTest.cpp  home-test.cpp  ik-test.cpp  imp-test.cpp  manip-daemon.cpp  manipTest.cpp  moveHips-test.cpp  proto-manip-daemon.cpp  readfile_ingress.cpp  tech-console.cpp  test-plus.cpp  trajTest.cpp  trajectory-run.cpp  walker.cpp
tables/: amp-duty.table  control.table  duty.table  torque.table
